test/cases/compile_errors/invalid_underscore_placement_in_float_literal-14.zig
fn main() void {
    var bad: f128 = 0x0.0_p1;
    _ = bad;
}

// error
//
// :2:27: error: expected digit before exponent
